<resources>
    <string name="app_name">NativeTalk NG</string>
    <string name="service_name">NativeTalk Service</string>
    <string name="addressbook_label">NativeTalk</string>
    <string name="notification_title">NativeTalk</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s connected</string>
    <string name="notification_register_failure">%s failed to connect</string>
    <string name="tunnel_host"></string>
    <string name="about_version">NativeTalk Android %s</string>
    <string name="about_liblinphone_version">NativeTalk Core %s</string>
    <string name="about_liblinphone_sdk_version">NativeTalk SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="sync_account_name">nativetalk contacts</string>
    <string name="notification_reply_label">Reply</string>
    <string name="notification_replied_label">Sent reply: %s</string>
    <string name="notification_call_hangup_label">Hangup</string>
    <string name="notification_call_answer_label">Answer</string>
    <string name="notification_mark_as_read_label">Mark as read</string>
    <string name="menu_balance">Check Balance</string>
    <string name="menu_assistant">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_packages">Buy Plans</string>
    <string name="menu_about">About</string>
    <string name="quit">Logout</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="create_token">Create token</string>
    <string name="no_card_yet">No card yet</string>
    <string name="no_token">No token</string>
    <string name="token_null_message">Token was null</string>
    <string name="token_not_gotten">Unable to get token</string>
    <string name="sample_card">4123450131001381</string>
    <string name="sample_cvv">883</string>
    <string name="sample_month">01</string>
    <string name="sample_year">2020</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="amount_in_kobo">Amount in Kobo</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="menu_account">My Account</string>
    <string name="menu_rates">Rates</string>
    <string name="menu_customers">My Customers</string>
    <string name="menu_enterprise">Enterprise</string>
    <string name="username">Username</string>
    <string name="userid">User-id (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="international_prefix">International phone number prefix</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="open">Open</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="link">Link</string>
    <string name="link_account_popup">Do you want to link the account %s with your phone number?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="later">Later</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="link_account">Link your account</string>
    <string name="update_available">An update is available</string>
    <string name="do_not_ask_again">Do not show again</string>
    <string name="delete_contacts_text">Are you sure you want to delete these contacts?\nThey will be deleted from your phone as well!</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_link_account">Link account</string>
    <string name="assistant_continue">Continue</string>
    <string name="assistant_activate">Activate your account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
    <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
    <string name="assistant_linphone_login_desc">Please enter your username and password of NativeTalk account</string>
    <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_create_account_phone_number_address">Your SIP address is</string>
    <string name="assistant_login_linphone">Use NativeTalk account</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
    <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
    <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
    <string name="assistant_create_account_part_email">Please enter an username, email and password for your NativeTalk account</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_linphone_account">Use your NativeTalk account</string>
    <string name="assistant_generic_account">Use SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_launch_qrcode">QRCode</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_error_confirmation_code">The confirmation code is invalid.\nPlease try again.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
    <string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
    <string name="assistant_openh264_downloading">Downloading OpenH264</string>
    <string name="assistant_openh264_restart">Before you can use OpenH264 codec you must restart %s.</string>
    <string name="assistant_openh264_error">Sorry an error has occurred.</string>
    <string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already taken.</string>
    <string name="assistant_phone_number_unavailable">This phone number is already used.\nPlease type a different number.\nYou can delete your existing account if you want to reuse your phone number.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\n\nIt may differ from your input to match requirements.\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="select_your_country">Select your Country</string>
    <string name="country_code">(%s)</string>
    <string name="use_username_instead_or_phone_number">Use a username (optional)</string>
    <string name="use_email_for_validation">Use email address for account validation</string>
    <string name="login_with_username">Use your username and password instead of your phone number</string>
    <string name="phone_number_info_title">What will my phone number be used for?</string>
    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using NativeTalk and your friends will know that they can reach you on NativeTalk as well.\n</string>
    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using NativeTalk and your friends will know that they can reach you on NativeTalk as well.\n</string>
    <string name="status_not_connected">Not connected</string>
    <string name="outgoing_call">outgoing call</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="content_description_menu">Menu</string>
    <string name="content_description_toggle_micro">Toggle micro</string>
    <string name="content_description_toggle_speaker">Toggle speaker</string>
    <string name="content_description_hang_up">Hang up</string>
    <string name="content_description_contact_picture">Contact picture</string>
    <string name="content_description_call_quality">Call quality</string>
    <string name="content_description_encryption">Encryption</string>
    <string name="content_description_username_field">Username field</string>
    <string name="content_description_display_field">Display name field</string>
    <string name="content_description_domain_field">Domain field</string>
</resources>