<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/cardview_light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="0dp"
            android:layout_gravity="start"
            android:src="@drawable/backold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="30dp"
            android:text="Welcome\nBack"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="Enter your username and password below"
            android:textColor="@color/colorL" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Your Username (phone number)"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/assistant_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_field"
                android:contentDescription="@string/content_description_username_field"
                android:hint="e.g 2348100112233"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/userid"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:visibility="gone" />

            <EditText
                android:id="@+id/assistant_userid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/resizable_textfield"
                android:contentDescription="@string/content_description_username_field"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorB"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:layout_weight="1"
                    android:text="Your Password"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/forgot_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="Forgot Password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorJ" />

            </LinearLayout>

            <EditText
                android:id="@+id/assistant_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_field"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/domain"
                android:textAllCaps="true"
                android:visibility="gone" />
            <!--sip.nativetalk.com.ng last used: sip.nativetalkmobile.com 69.238.223.149 sip.nativetalkmobile.com-->
            <EditText
                android:id="@+id/assistant_domain"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/resizable_textfield"
                android:contentDescription="@string/content_description_domain_field"
                android:maxLines="1"
                android:text="37.9.63.182"
                android:textColor="@color/colorB"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/assistant_display_name_optional"
                android:textAllCaps="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/assistant_display_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/resizable_textfield"
                android:contentDescription="@string/content_description_display_field"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorB"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/transport"
                android:textAllCaps="true"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/assistant_transports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/transport_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:checked="true"
                    android:text="@string/pref_transport_udp" />

                <RadioButton
                    android:id="@+id/transport_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/pref_transport_tcp" />

                <RadioButton
                    android:id="@+id/transport_tls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/pref_transport_tls" />
            </RadioGroup>

            <Button
                android:id="@+id/assistant_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:background="@drawable/green_button_full"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/assistant_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="New to Native talk? "
                    android:textColor="#222" />

                <TextView
                    android:id="@+id/create_acct_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create an account"
                    android:textAllCaps="false"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorJ" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>