<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/colorA"
    android:orientation="horizontal">

        <ImageView
            android:id="@+id/side_menu_button"
            android:layout_width="?android:actionBarSize"
            android:layout_height="?android:actionBarSize"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/content_description_menu"
            android:padding="10dp"
            android:src="@drawable/hamburger_menu" />

        <TextView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="55dp"
            android:text="Dial Number"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/call_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_description_call_quality"
            android:padding="10dp"
            android:src="@drawable/call_quality_indicator_0"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/status_led"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/side_menu_button"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:src="@drawable/led_disconnected" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/status_led"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:text="@string/status_not_connected"
            android:visibility="gone"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/voicemail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:src="@drawable/voicemail"
            android:visibility="gone" />

        <TextView
            android:id="@+id/voicemail_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/encryption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_encryption"
            android:padding="5dp"
            android:src="@drawable/security_ko"
            android:visibility="gone" />
</RelativeLayout>