<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorH">

    <LinearLayout
        android:id="@+id/rq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorH"
        android:orientation="vertical">

    <fragment
        android:id="@+id/status"
        android:visibility="gone"
        android:name="org.linphone.call.CallStatusBarFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:layout="@layout/status_bar" />

    <RelativeLayout
        android:id="@+id/top_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/lighToolbarBackgroundColor">

        <TextView
            style="@style/toolbar_title_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/outgoing_call" />

    </RelativeLayout>

        <ImageView
            android:src="@drawable/blue_logo"
            android:contentDescription="@string/content_description_contact_picture"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"/>

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="Outgoing call" />

        <RelativeLayout
            android:id="@+id/avatar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <include layout="@layout/contact_avatar_100" />

            <!--        <ImageView-->
            <!--            android:id="@+id/contact_picture"-->
            <!--            android:layout_width="100dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:adjustViewBounds="true"-->
            <!--            android:contentDescription="@string/content_description_contact_picture"-->
            <!--            android:src="@drawable/user_copy" />-->

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/contact_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text=""
                android:gravity="center_vertical|center_horizontal" />

            <org.linphone.views.MarqueeTextView
                android:id="@+id/contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text=""
                android:paddingBottom="0dp"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:id="@+id/contact_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text=""
                android:paddingBottom="10dp"
                android:layout_gravity="center_vertical|center_horizontal" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/cardview_light_background"
        android:layout_below="@+id/rq"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/micro"
                android:src="@drawable/mute_dial"
                android:contentDescription="@string/content_description_toggle_micro"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Mute" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/speaker"
                android:src="@drawable/dial_speaker"
                android:contentDescription="@string/content_description_toggle_speaker"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:padding="10dp"/>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Speaker" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/outgoing_hang_up"
        android:src="@drawable/dial_end_call"
        android:contentDescription="@string/content_description_hang_up"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.7"
        android:padding="12dp"/>

</RelativeLayout>
